tests/miniJava/neg/004865_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( int [] else ) { return 0 ; } }
